# Hardwood-Heuristics

./: .gitignore  404.html  CNAME  README.md  example_nba_kaggle.txt  index.html  mkdocs.yml  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/workflows/: deploy.yml
data/processed/: theorem1_sweep.csv  theorem1_sweep.json  theorem2_grid.csv  theorem2_grid.npy  theorem2_metadata.json  theorem2_sweep.csv  theorem2_wp_foul_grid.csv  theorem2_wp_foul_grid.npy  theorem2_wp_no_foul_grid.csv  theorem2_wp_no_foul_grid.npy  theorem3_sweep.csv  theorem3_sweep.json  transitions.parquet
docs/: index.md  theorem1_two_for_one.md  theorem2_foul_up_3.md  theorem3_timeout.md
notebooks/: theorem1_two_for_one.ipynb  theorem2_foul_up_3.ipynb  theorem3_late_game_timeout.ipynb
src/: __init__.py  collect_data.py  data_pipeline.py  generate_docs.py  generate_plots.py  mdp_engine.py  scrape_nba_data.py  visualizations.py
src/theorems/: __init__.py  theorem1.py  theorem2.py  theorem3.py  utils.py
tests/: test_collect_data.py  test_data_pipeline.py  test_deploy_workflow.py  test_generate_docs.py  test_mdp_engine.py  test_scrape_nba_data.py  test_visualizations.py
theorem1_two_for_one/: index.html
theorem2_foul_up_3/: index.html
theorem3_timeout/: index.html
